stil so vibi lol

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,26 +39,33 @@ services:
     networks:
       - ankaa_network
   mqtt:
-    image: eclipse-mosquitto
+    image: eclipse-mosquitto:2.0
     container_name: mqtt_broker
     ports:
-      - "1883:1883" # MQTT Protocol
-      - "9001:9001" # WebSocket for MQTT (optional)
+      - "1883:1883"
+      - "9001:9001"
     volumes:
       - mosquitto_data:/mosquitto/data
       - mosquitto_config:/mosquitto/config
-      - mosquitto_logs:/mosquitto/logs
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 1883 || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - ankaa_network
 
   rust_iot_mock:
     build:
-      context: ./ankaa_iot_mock/iot_mock
+      context: ./iot_mock
+      dockerfile: Dockerfile
     container_name: rust_iot_mock
     depends_on:
-      - mqtt # Wait for MQTT to be ready before starting the Rust service
-    ports:
-      - "8080:8080" # Exposing port for the mock service
+      mqtt:
+        condition: service_healthy
+    environment:
+      - MQTT_HOST=mqtt
+      - RUST_LOG=info
     networks:
       - ankaa_network
 
