--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rumqttc = "0.21.0"  # MQTT client
+rumqttc = "0.24.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
-rand = "0.8.0"  # For generating random data
-chrono = { version = "0.4.0", features = ["serde"] }  # For timestamps
+tokio = { version = "1.44", features = ["full"] }
+rand = "0.9.0"
+chrono = { version = "0.4", features = ["serde"] }
+log = "0.4.0"
+env_logger = "0.11.8"  # For logging
