successfulyl publishing task to mqtt server. there should be a scuring part of this that involves setting up env variables in the main app and on the services but who cares. i should remember that this is really only meant to simulate data. the notification system is the important part . well. i suppose handling unordered data and deciding to batch data coming from the mqtt cue. that could mean streaming the data to influx(wonder if redis could handle this as well bc in memory store lowers latency but idk. i will just start building the notifications and dashbaord. btw i think i hate liveview. i think. but i will dive into templates during and vibe it out

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - ankaa_network
-
   redis:
     image: redis:7-alpine
     container_name: ankaa_redis_dev
@@ -24,7 +23,6 @@ services:
       - redis_data:/data
     networks:
       - ankaa_network
-
   timescale:
     image: timescale/timescaledb-ha:pg17
     container_name: ankaa_timescale_dev
@@ -46,15 +44,18 @@ services:
       - "9001:9001"
     volumes:
       - mosquitto_data:/mosquitto/data
-      - mosquitto_config:/mosquitto/config
+      - ./mosquitto/config:/mosquitto/config
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 1883 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "mosquitto_sub -h localhost -t 'test/topic' -C 1 -E 2>/dev/null || exit 1",
+        ]
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
       - ankaa_network
-
   rust_iot_mock:
     build:
       context: ./iot_mock
@@ -78,5 +79,4 @@ volumes:
   timescale_data:
   redis_data:
   mosquitto_data:
-  mosquitto_config:
   mosquitto_logs:
