--- a/ankaa_beacon/Dockerfile.dev
+++ b/ankaa_beacon/Dockerfile.dev
@@ -26,4 +26,4 @@ ENV MIX_ENV=dev
 EXPOSE 4000
 
 # Install mix dependencies and npm dependencies on container start
-CMD ["sh", "-c", "cd assets && npm install && cd .. && mix phx.server"]
+CMD ["sh", "-c", "cd assets && npm install && cd .. && mix deps.get && mix ecto.migrate && mix phx.server"]
