--- a/ankaa_beacon/Dockerfile
+++ b/ankaa_beacon/Dockerfile
@@ -18,32 +18,50 @@ ARG DEBIAN_VERSION=bullseye-20250407-slim
 ARG BUILDER_IMAGE="hexpm/elixir:${ELIXIR_VERSION}-erlang-${OTP_VERSION}-debian-${DEBIAN_VERSION}"
 ARG RUNNER_IMAGE="debian:${DEBIAN_VERSION}"
 
-# Builder stage
-FROM hexpm/elixir:1.18.3-erlang-27.3.3-debian-bullseye-20250407-slim AS builder
+FROM ${BUILDER_IMAGE} as builder
 
-# Install build dependencies
-RUN apt-get update -y && apt-get install -y \
-    build-essential \
-    git \
-    curl \
+# install build dependencies
+RUN apt-get update -y && apt-get install -y build-essential git \
     && apt-get clean && rm -f /var/lib/apt/lists/*_*
 
+# prepare build dir
 WORKDIR /app
 
-# Install hex + rebar
+# install hex + rebar
 RUN mix local.hex --force && \
     mix local.rebar --force
 
-# Copy the application code
-COPY . .
+# set build ENV
+ENV MIX_ENV="dev"
 
-# Set environment to production
-ENV MIX_ENV=prod
+# install mix dependencies
+COPY mix.exs mix.lock ./
+RUN mix deps.get --only $MIX_ENV
+RUN mkdir config
 
-# Install dependencies and build the release
-RUN mix deps.get --only prod && \
-    mix compile && \
-    mix release
+# copy compile-time config files before we compile dependencies
+# to ensure any relevant config change will trigger the dependencies
+# to be re-compiled.
+COPY config/config.exs config/${MIX_ENV}.exs config/
+RUN mix deps.compile
+
+COPY priv priv
+
+COPY lib lib
+
+COPY assets assets
+
+# compile assets
+RUN mix assets.deploy
+
+# Compile the release
+RUN mix compile
+
+# Changes to config/runtime.exs don't require recompiling the code
+COPY config/runtime.exs config/
+
+COPY rel rel
+RUN mix release
 
 # start a new build stage so that the final image will only contain
 # the compiled release and other runtime necessities
