--- a/ankaa_beacon/Dockerfile.dev
+++ b/ankaa_beacon/Dockerfile.dev
@@ -8,13 +8,6 @@ RUN apt-get update -y && apt-get install -y \
     git \
     inotify-tools \
     curl \
-    libstdc++6 \
-    openssl \
-    libncurses5 \
-    locales \
-    ca-certificates \
-    libgmp-dev \      
-    libssl-dev \      
     && curl -sL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs \
     && apt-get clean && rm -f /var/lib/apt/lists/*_*
@@ -33,9 +26,8 @@ COPY mix.exs mix.lock ./
 COPY config config
 
 # Get dependencies and compile them in the container
-RUN mix deps.get && \
-    mix deps.compile
+RUN mix deps.get && mix deps.compile
 
 EXPOSE 4000
 
-CMD ["sh", "-c", "cd assets && npm install && cd .. && mix deps.get && mix ecto.migrate && mix phx.server"]
+CMD ["sh", "-c", "cd assets && npm install && cd .. && mix ecto.migrate && mix phx.server"]
