--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,3 +93,15 @@ jobs:
           MIX_ENV: test
         run: mix test
         working-directory: ankaa_beacon
+  deploy:
+    name: Deploy app
+    runs-on: ubuntu-latest
+    needs: build  # Ensures this job runs only after the build job succeeds
+    concurrency: deploy-group  # Optional: ensures only one deploy runs at a time
+    steps:
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        working-directory: ankaa_beacon
