--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.9.0"
 chrono = { version = "0.4", features = ["serde"] }
 log = "0.4.0"
 env_logger = "0.11.8"  # For logging
+dashmap = "6.1"
