update some rust tings for deploy & deploy

--- a/iot_mock/Dockerfile
+++ b/iot_mock/Dockerfile
@@ -1,11 +1,11 @@
 # Build stage
-FROM rust:latest as builder
+FROM rust:bookworm AS builder
 WORKDIR /app
 COPY . .
 RUN cargo build --release
 
 # Runtime stage
-FROM debian:bookworm-slim
-RUN apt-get update && apt-get install -y libssl3 && rm -rf /var/lib/apt/lists/*
+FROM debian:bookworm
+RUN apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends libssl3 && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /app/target/release/iot_mock /usr/local/bin/
 CMD ["iot_mock"]
