--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rumqttc = "0.24.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1.44", features = ["full"] }
-rand = "0.9.0"
-chrono = { version = "0.4", features = ["serde"] }
-log = "0.4.0"
+rumqttc = {version="0.25.0", features = ["use-native-tls"]}
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+rand = "0.9.2"
+chrono = { version = "0.4.42", features = ["serde"] }
+log = "0.4.28"
 env_logger = "0.11.8"  # For logging
 dashmap = "6.1"
