--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rumqttc = {version="0.25.0", features = ["use-native-tls"]}
+rumqttc = {version="0.25.1", features = ["use-rustls"]}
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
