--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -11,5 +11,5 @@ tokio = { version = "1.48.0", features = ["full"] }
 rand = "0.9.2"
 chrono = { version = "0.4.42", features = ["serde"] }
 log = "0.4.28"
-env_logger = "0.11.8"  # For logging
+env_logger = "0.11.8"
 dashmap = "6.1"
