--- a/iot_mock/Dockerfile
+++ b/iot_mock/Dockerfile
@@ -1,11 +1,11 @@
+# Build stage
 FROM rust:bookworm AS builder
 WORKDIR /app
-RUN apt-get update && apt-get install -y musl-tools
-RUN rustup target add x86_64-unknown-linux-musl
 COPY . .
-RUN cargo build --target x86_64-unknown-linux-musl --release
+RUN cargo build --release
 
-FROM alpine:latest
-RUN apk add --no-cache ca-certificates
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/iot_mock /usr/local/bin/iot_mock
+# Runtime stage
+FROM debian:bookworm
+RUN apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends libssl3 && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /app/target/release/iot_mock /usr/local/bin/
 CMD ["iot_mock"]
