--- a/iot_mock/Cargo.toml
+++ b/iot_mock/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rumqttc = {version="0.25.1", features = ["use-rustls"]}
+rumqttc = {version="0.25.1", features = ["use-native-tls"]}
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 rand = "0.9.2"
 chrono = { version = "0.4.42", features = ["serde"] }
 log = "0.4.28"
-env_logger = "0.11.8"
+env_logger = "0.11.8" 
 dashmap = "6.1"
