complience complence complinece COMPLIENCE!

--- a/ankaa_beacon/.env.example
+++ b/ankaa_beacon/.env.example
@@ -21,3 +21,14 @@ SMTP_HOST=
 SMTP_PORT=587
 SMTP_USERNAME=
 SMTP_PASSWORD=
+
+# Test Configuration
+# Set the test partition for distributed testing
+MIX_TEST_PARTITION=1
+
+# Database URL (to be set in production)
+DATABASE_URL=""
+
+# Mailgun Configuration
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
